openpearl-code/testsuite/must_not_compile/01_typeFixed/001_length_fixed_too_large.expect
001_length_fixed_too_large.prl:4:14: 001_length_fixed_too_large.prl:5:12: ERROR : Syntax error : precision for FIXED must be between 0 and 63
LENGTH FIXED(64);
             ^
