openpearl-code/testsuite/must_not_compile/01_typeFixed/001_length_fixed_too_large.prl
MODULE(m1);

PROBLEM;
LENGTH FIXED(64);
MODEND;
